update fix images

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         
         <div class="in_flex">
             Soy Nacho, también conocido como sushidev, y creador de videojuegos bajo el nombre "sushigames" con el motor godot 3.
-            Para acceder a mis proyectos mas recientes, puedes ver en la sección "proyectos" algunos de los que tengo en
+            <br>Para acceder a algunos de mis proyectos, puedes ver en la sección "proyectos" algunos de los que tengo en
             este sitio.
 
         </div>
