--- a/informacion.html
+++ b/informacion.html
@@ -83,6 +83,7 @@
             Mi lenguaje de programación favorito es javascript, aunque también aprendí un poco de python (pero muy poco).
             La red por la que usted puede contactarme  si tiene alguna duda acerca de mis juegos, es twitter y si quiere ver mis tutoriales puede verlos en youtube, todas estas redes están en la sección de inicio.
 
+            Esta web está hecha con mi conocimiento básico de CSS y HTML5, cuando lo necesité agregaré js del cual también tengo conocimiento.
         </div>
       
       
